# homework

./: .gitignore  CLAUDE.md  README.md  git-init.ps1  题目.md
backend-java/: pom.xml
backend-python/: main.py  pyproject.toml
backend-python/app/core/: config.py
backend-python/app/routers/: analytics_marketing.py  chat.py  knowledge.py  sentiment.py
backend-python/app/schemas/: chat.py  knowledge.py
backend-python/app/services/: asr_service.py  document_parser.py  embedding_service.py  llm_service.py  rag_service.py  sentiment_service.py  text_chunker.py  tts_service.py  vector_store.py
backend-python/app/services/digital_human/: audio_analyzer.py
backend-python/app/utils/: text_utils.py
backend-python/scripts/: import_routes.py
doc/: 20260602-项目启动指南.md  20260602-项目文件结构说明.md  202606021027-git仓库初始化与远程连接.md  202606021115-移除Playwright-MCP配置.md  202606021120-doc目录加入gitignore.md  202606021125-删除多余分支仅保留main.md  202606021730-Phase0项目骨架搭建与最小链路跑通.md  202606081610-Phase1-RAG知识库构建.md  202606081700-项目整理并推送到GitHub.md  202606082330-修复合并冲突配置ASR-TTS本地模式.md  202606090008-修复Java后端BOM编码编译失败.md  202606090035-修复WebSocket转发输入为空和卡住问题.md  202606090040-修复语音按钮交互改为点击切换.md  202606090050-语音输入改为录音转文字填入输入框.md  202606091306-修复ASR500错误端口冲突和代理阻断.md  202606091320-修复ASR500浏览器录音格式转换.md  202606091400-MiMo-TTS-API调研报告.md  202606091500-Phase2-TTS语音合成MiMo-API.md  202606091510-ASR改用MiMo-API统一语音服务.md  202606102155-项目进度总结.md  202606112225-Phase3完成表情联动TTS按句合成.md  202606112300-Phase4完成个性化路线推荐.md  202606112335-Phase5完成管理后台数据大屏.md  202606112340-Phase6项目总结与交付准备.md  202606161200-五项问题批量修复.md  (+14 more)
(+122 files in other folders)
