[project]
name = "backend-python"
version = "0.2.0"
description = "景区AI数字人 - Python后端 (Phase 2: 语音交互)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.40.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.9",
    # ASR 语音识别
    "websockets>=12.0",
    # RAG 知识检索
    "chromadb>=0.4.0",
    # 音频处理
    "numpy>=1.24.0",
    # 可选依赖（本地模型推理）
    # "funasr>=1.1.0",
    # "soundfile>=0.12.0",
    # "torch>=2.0.0",
]
