[project]
name = "backend-python"
version = "0.2.0"
description = "景区AI数字人 - Python后端"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.40.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.9",
    # RAG 知识检索
    "chromadb>=1.0.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    # ASR 语音识别（本地模式，需单独安装 funasr）
    # funasr 在 Windows 上依赖 editdistance 编译有问题，需手动安装
    "websockets>=12.0",
    # TTS 语音合成
    "soundfile>=0.12.0",
    # 音频处理
    "numpy>=1.24.0",
]
